# amplfi

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  apptainer.def  conda-lock.yml  delta.def  environment.yaml  pyproject.toml
.github/: filters.yaml  (+1 more)
amplfi/architectures/: pyproject.toml
amplfi/architectures/amplfi/architectures/: losses.py
amplfi/architectures/amplfi/architectures/embeddings/: base.py  resnet.py
amplfi/architectures/amplfi/architectures/flows/: base.py  coupling.py  iaf.py
amplfi/architectures/tests/embeddings/: test_dense.py  test_embeddings.py
amplfi/architectures/tests/flows/: test_flows.py
amplfi/law/: config.cfg  datagen.cfg  pyproject.toml  run.sh
amplfi/law/amplfi/law/: Untitled-1.ipynb  base.py  paths.py  tasks.py
libs/architectures/: pyproject.toml
libs/architectures/mlpe/architectures/: __init__.py  normalizing_flow.py  wrapper.py
libs/architectures/mlpe/architectures/embeddings/: __init__.py  convolution.py  dense.py  flattener.py  resnet.py
libs/architectures/mlpe/architectures/flows/: __init__.py  coupling_flow.py  flow.py  maf.py  utils.py
libs/architectures/tests/: test_normalizing_flow.py  test_wrapper.py
libs/architectures/tests/embeddings/: test_convolution.py  test_dense.py
libs/architectures/tests/flows/: test_coupling_flow.py  test_flows.py
libs/base/: pyproject.toml
libs/data/: pyproject.toml
libs/data/mlpe/data/: dataloader.py  utils.py  waveform_sampler.py
libs/data/mlpe/data/transforms/: __init__.py  injection.py  preprocessor.py  standard_scaler.py  transform.py  whitening.py
libs/data/tests/: conftest.py  test_dataloader.py  test_distributions.py
libs/data/tests/transforms/: Untitled.ipynb  conftest.py  test_injection.py  test_standard_scaler.py  test_transform.py  test_whitening.py
libs/deploy/: pyproject.toml
libs/injection/: pyproject.toml
libs/injection/mlpe/injection/: __init__.py  injection.py  priors.py  utils.py
libs/injection/mlpe/injection/waveforms/: sine_gaussian.py
libs/injection/tests/: test_injection.py
libs/injection/tests/waveforms/: test_sine_gaussian.py
libs/logging/: pyproject.toml
libs/trainer/: pyproject.toml
libs/trainer/mlpe/trainer/: Untitled.ipynb  __init__.py  optimizers.py  schedulers.py  trainer.py  utils.py  wrapper.py
libs/trainer/tests/: test_trainer.py  test_wrapper.py
libs/waveforms/: pyproject.toml
libs/waveforms/mlpe/waveforms/: __init__.py  sine_gaussian.py
libs/waveforms/tests/: test_sine_gaussian.py
projects/generate_waveforms/: generate_waveforms.py  pyproject.toml
projects/generate_waveforms/tests/: conftest.py  test_generate_waveforms.py
projects/generate_waveforms/tests/priors/: sine_gaussian.prior
projects/sandbox/analyze_with_bilby/: environment.yaml  pyproject.toml
projects/sandbox/analyze_with_bilby/analyze_with_bilby/: bilby_pipe.py  deploy.py  run.py
projects/sandbox/bilby/: bilby_analysis.py  environment.yaml  pyproject.toml
projects/sandbox/data_generation/: environment.yaml  pyproject.toml  simnoise.ipynb
projects/sandbox/data_generation/data_generation/: background.py  bilby_injections.py  flow_injections.py  generate_background.py  generate_testing_set.py  generate_waveforms.py  pp_plot_injections.py  utils.py  waveforms.py
projects/sandbox/data_generation/data_generation/bilby/: injections.py
projects/sandbox/data_generation/tests/: conftest.py  test_flow_injections.py  test_generate_pp_plot_injections.py  test_generate_testing_set.py  test_generate_waveforms.py  test_utils.py
projects/sandbox/export/: export.py  pyproject.toml
projects/sandbox/generate_background/: generate_background.py  pyproject.toml
projects/sandbox/generate_testing_set/: generate_testing_set.py  pyproject.toml
projects/sandbox/generate_testing_set/tests/: conftest.py  test_generate_testing_set.py
projects/sandbox/generate_waveforms/: generate_waveforms.py  pyproject.toml
projects/sandbox/generate_waveforms/priors/: sine_gaussian.prior
projects/sandbox/generate_waveforms/tests/: conftest.py  test_generate_waveforms.py
projects/sandbox/sample/: Untitled-1.ipynb  pp_plot.py  pyproject.toml  sample.py  sample_with_bilby.py  sample_with_flow.py  utils.py
projects/sandbox/sample_with_bilby/: pyproject.toml  sample_with_bilby.py
projects/sandbox/sample_with_flow/: pyproject.toml  sample_with_flow.py  utils.py
projects/sandbox/train/: cbc-config.yaml  config.yaml  pyproject.toml  run.sh  train.py  utils.py  validation.py
projects/sandbox/train/configs/: cbc.yaml
projects/sandbox/train/train/: callbacks.py  cli.py  model.py  priors.py  testing.py  validation.py  waveforms.py
projects/sandbox/train/train/architectures/embeddings/: resnet.py
projects/sandbox/train/train/architectures/flows/: __init__.py  base.py  maf.py
projects/sandbox/train/train/data/: base.py  generator.py
projects/sandbox_sg/analyze_with_bilby/: pyproject.toml
projects/sandbox_sg/sampling/: pyproject.toml  run.sh
projects/sandbox_sg/sampling/sampling/: bilby_comparison.py  utils.py
projects/train/: apptainer.def  delta.def  pyproject.toml
projects/train/configs/: cbc.yaml  sg.yaml
projects/train/configs/flow/: cbc.yaml  sg.yaml
projects/train/configs/similarity/: cbc.yaml
projects/train/train/: augmentations.py  callbacks.py  cli.py  losses.py  priors.py  testing.py
projects/train/train/architectures/: losses.py
projects/train/train/architectures/embeddings/: resnet.py
projects/train/train/architectures/flows/: __init__.py  base.py  iaf.py
projects/train/train/cli/: base.py  flow.py  flow_runner.slurm  sim_runner.slurm  similarity.py  tune.py
projects/train/train/data/: augmentors.py  utils.py
projects/train/train/data/datasets/: base.py  flow.py  similarity.py
projects/train/train/data/utils/: fs.py
projects/train/train/data/waveforms/: loader.py  sampler.py
projects/train/train/data/waveforms/generator/: cbc.py  generator.py  sg.py
projects/train/train/models/: base.py  flow.py  similarity.py
projects/train/train/tune/: tune.py  tune.yaml
(+156 files in other folders)
