[tool.poetry]
name = "amplfi.architectures"
version = "0.1.0"
description = "Architectures for amplfi"
authors = ["Ethan Jacob Marx <ethan.marx@ligo.org>", "Deep Chatterjee <deep.chatterjee@ligo.org>"]
packages = [{include = "amplfi"}]


[tool.poetry.dependencies]
python = ">=3.9,<3.12"
ml4gw = {path = "../../ml4gw", develop = true}
pyro-ppl = "^1.9"

[tool.poetry.group.test.dependencies]
pytest = "^8.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
