[tool.poetry]
name = "amplfi.law"
version = "0.1.0"
description = "Law tasks for running amplfi analyses"
authors = ["Ethan Jacob Marx <ethan.marx@ligo.org>"]
packages = [{include = "amplfi"}]


[tool.poetry.dependencies]
python = ">=3.9,<3.12"
law = {git = "https://github.com/riga/law.git", branch = "master"}
mldatafind = {path = "../../mldatafind/", develop = true} 
luigi = "^3.5.1"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
