[tool.poetry]
name = "mlpe.architectures"
version = "0.1.0"
description = "Architecture library"
authors = ["ethan.marx <ethan.marx@ligo.org>"]
license = "MIT"
packages = [{include = "mlpe"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
nflows = "^0.14"
torch = "^1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"

[tool.poetry.extras]
wrapper = ["typeo"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
