[tool.poetry]
name = "mlpe-data"
version = "0.1.0"
description = "tools for dataloading and preprocessing"
authors = ["ethan.marx <ethan.marx@ligo.org>"]
license = "MIT"
readme = "README.md"
packages = [{include = "mlpe"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
