[tool.poetry]
name = "mlpe.data"
version = "0.1.0"
description = "Dataloading tools"
authors = ["ethan.marx <ethan.marx@ligo.org>"]
license = "MIT"
packages = [{include = "mlpe"}]

[tool.poetry.dependencies]
python = " >=3.8,<3.11"
"ml4gw" = {path = "../../ml4gw", develop = true}


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = ["gpu: run tests using default CUDA device"]
