[tool.poetry]
name = "mlpe.deploy"
version = "0.0.1"
description = "Tools for deploying jobs on the LIGO data grid"
authors = ["Ethan Marx"]
license = "MIT"
packages = [
    {include = "mlpe"}
]
# readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"

[tool.poetry.dev-dependencies]
pytest = "^7.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
