[tool.poetry]
name = "mlpe.injection"
version = "0.0.1"
description = "Utilities for generating gravitational wave signals"
authors = ["Ethan Marx <ethan.marxligo.org>",]
license = "MIT"
packages = [
    {include = "mlpe"}
]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
bilby = "^2.0"
lalsuite = "^7.4"

[tool.poetry.dev-dependencies]
pytest = "^7.2"

[build-system]
requires = ["poetry>=1.2"]
build-backend = "poetry.masonry.api"
