[tool.poetry]
name = "mlpe.logging"
version = "0.0.1"
description = "PE logging utilities"
authors = ["Ethan Marx"]
license = "MIT"
packages = [
    {include = "mlpe"}
]
# readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"

[build-system]
requires = ["poetry>=1.1"]
build-backend = "poetry.masonry.api"
