[tool.poetry]
name = "mlpe.waveforms"
version = "0.1.0"
description = "Library of custom waveforms"
authors = ["ethan.marx <ethan.marx@ligo.org>"]
license = "MIT"
#readme = "README.md"
packages = [{include = "mlpe"}]

[tool.poetry.dependencies]
python = "^3.9"
bilby = "^1.1.5"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
