[tool.poetry]
name = "generate-waveforms"
version = "0.1.0"
description = "Project for generating a waveform dataset of arbitrary morphology"
authors = ["ethan.marx <ethan.marx@ligo.org>"]
license = "MIT"
readme = "README.md"
packages = [{include = "generate_waveforms"}]

[tool.poetry.dependencies]
python = "^3.9"
"mlpe.waveforms" = {path = "../../libs/waveforms", develop = true}


[tool.typeo]
waveform = "mlpe.waveforms.sine_gaussian_frequency"
prior = "./priors/sine_gaussian.prior"  
sample_rate = 2048 
domain = "frequency"
n_samples = 100 
waveform_duration = 4
datadir = "./data/"
logdir = "./log/"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
