[tool.poetry]
name = "bilby-analysis"
version = "0.1.0"
description = "Produce posterior samples with bilby to compare with our network"
authors = ["ethan.marx <ethan.marx@ligo.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
typeo = {git = "https://github.com/ML4GW/typeo.git"}
"mlpe.logging" = {path = "../../../libs/logging", develop = true}
"mlpe.injection" = {path = "../../../libs/injection", develop = true} # needed for loading sg waveform

[tool.poetry.scripts]
analyze-with-bilby = "bilby_analysis:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
