[tool.poetry]
name = "data_generation"
version = "0.1.0"
description = "Tools to generate signals, waveforms, and background"
authors = ["ethan.marx <ethan.marx@ligo.org>"]
license = "MIT"
include = ["data_generation/", "tests/"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
"ml4gw" = {path = "../../../ml4gw/", develop = true}
mldatafind = {git = "https://github.com/ML4GW/mldatafind.git"}
"mlpe.base" = {path = "../../../libs/base", extras = ["numpy"], develop = true}
"mlpe.logging" = {path = "../../../libs/logging", develop = true}
"mlpe.injection" = {path = "../../../libs/injection", develop = true}
typeo = {git = "https://github.com/ML4GW/typeo.git"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[tool.poetry.scripts]
generate-background = "data_generation.generate_background:main"
generate-testing = "data_generation.generate_testing_set:main"
generate-waveforms = "data_generation.generate_waveforms:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
