[tool.poetry]
name = "generate_background"
version = "0.1.0"
description = "MIT"
authors = ["ethan.marx <ethan.marx@ligo.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
"hermes.typeo" = "^0.1.5"
"mlpe.logging" = {path = "../../../libs/logging", develop = true}
"mlpe.base" = {path = "../../../libs/base", extras = ["numpy"], develop = true}

[tool.poetry.scripts]
generate-background = "generate_background:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
