[tool.poetry]
name = "generate_background"
version = "0.1.0"
description = "MIT"
authors = ["ethan.marx <ethan.marx@ligo.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
"mlpe.logging" = {path = "../../../libs/logging", develop = true}
"mlpe.base" = {path = "../../../libs/base", extras = ["numpy"], develop = true}
typeo = {git = "https://github.com/ML4GW/typeo.git"}

[tool.poetry.scripts]
generate-background = "generate_background:main"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
