[tool.poetry]
name = "generate_waveforms"
version = "0.1.0"
description = "Project for generating a waveform dataset of arbitrary morphology"
authors = ["ethan.marx <ethan.marx@ligo.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
"mlpe.injection" = {path = "../../../libs/injection", develop = true}

"mlpe.logging" = {path = "../../../libs/logging", develop = true}
typeo = {git = "https://github.com/ML4GW/typeo.git"}

[tool.poetry.scripts]
generate-waveforms = "generate_waveforms:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
