[tool.poetry]
name = "sample_with_bilby"
version = "0.0.0"
description = "Analyze injections with bilby for comparison with network"
authors = ["Deep Chatterjee <deep.chatterjee@ligo.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
typeo = {git = "https://github.com/ML4GW/typeo.git"}

bilby = "^2.0.0"
bilby_pipe = "^1.0.8"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu116"
secondary = true
default = false

[tool.poetry.scripts]
sample-with-bilby = "sample_with_bilby:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
