[tool.poetry]
name = "train"
version = "0.1.0"
description = "Generate training data and launch trainer"
authors = ["ethan.marx <ethan.marx@ligo.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
torch = {version = "^1.12", source = "torch"}

"mlpe.architectures" = {path = "../../../libs/architectures", develop = true}
"mlpe.data" = {path = "../../../libs/data", develop  = true}
"mlpe.trainer" = {path = "../../../libs/trainer", develop = true}
"mlpe.logging" = {path = "../../../libs/logging", develop = true}
"ml4gw" = {path = "../../../ml4gw", develop = true}

typeo = {path = "../../../typeo", develop = true}

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu116"
secondary = true
default = false

[tool.poetry.scripts]
train = "train:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
